# finapp-api

./: .gitignore  Makefile  README.md  pyproject.toml
api/app/: deps.py  main.py
api/app/core/: config.py  errors.py  logging.py  security.py
api/app/db/: supabase_client.py
api/app/db/repositories/: accounts_repo.py  base_repository.py  categories_repo.py  goals_repo.py  households_repo.py  obligations_repo.py  reports_repo.py  transactions_repo.py
api/app/models/: auth.py  base.py  catalog.py  goals.py  households.py  obligations.py  reports.py  transactions.py
api/app/routers/: auth_router.py  catalog_router.py  goals_router.py  households_router.py  obligations_router.py  reports_router.py  transactions_router.py
api/app/services/: contributions_service.py  idempotency_service.py  payments_service.py  recurrence_service.py
migrations/: 000_schema.sql  001_idempotency.sql  002_helpers.sql
tests/: conftest.py
tests/e2e/: test_auth_e2e.py  test_transactions_e2e.py
tests/unit/: test_idempotency.py  test_security.py
